<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="airQuality"
            type="com.example.android.themeteo.weather.WeatherRecyclerViewItem.AirQuality" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444444">

        <TextView
            android:id="@+id/air_quality_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/air_quality_small"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/air_quality_value_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/air_quality_title"
            tools:text="Fair" />

        <TextView
            android:id="@+id/air_quality_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/scale_title"
            android:textColor="#A8A8A8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/air_quality_value_details" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/graph_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/conatiner_air_quality"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/air_quality_message">

            <TextView
                android:id="@+id/air_quality_message_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Enjoy your usual outdoor activities." />

            <ImageView
                android:id="@+id/air_quality_graphic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,995:26"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/air_quality_message_description"
                tools:srcCompat="@drawable/air_quality_moderate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/pollutants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/pollutants"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graph_container" />

        <TextView
            android:id="@+id/polluntants_concentrations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/pollutants_concentrations"
            android:textAlignment="viewStart"
            android:textColor="#A8A8A8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pollutants" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pollutants_concentrations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/conatiner_air_quality"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/polluntants_concentrations">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <TextView
                android:id="@+id/index_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/index_level"
                android:textAlignment="textEnd"
                android:textColor="#A8A8A8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pm2_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/pm2_5"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/index_level" />

            <TextView
                android:id="@+id/pm2_5_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/intValue(airQuality.pm2_5)}"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/pm2_5"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/pm2_5"
                tools:text="21" />

            <TextView
                android:id="@+id/index_level_value_pm2_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/pm2_5_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/pm2_5_value"
                tools:text="Moderate" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/pm2_5"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/pm10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/pm10"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/pm10_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/intValue(airQuality.pm10)}"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/pm10"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/pm10"
                tools:text="30" />

            <TextView
                android:id="@+id/index_level_value_pm10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/pm10_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/pm10_value"
                tools:text="Fair" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/pm10"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/no2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/no2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/no2_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/intValue(airQuality.no2)}"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/no2"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/no2"
                tools:text="95" />

            <TextView
                android:id="@+id/index_level_value_no2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/no2_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/no2_value"
                tools:text="Moderate" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/no2"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/o3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/ozone_o3"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <TextView
                android:id="@+id/o3_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/intValue(airQuality.o3)}"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/o3"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/o3"
                tools:text="12" />

            <TextView
                android:id="@+id/index_level_value_o3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/o3_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/o3_value"
                tools:text="Good" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/o3"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/so2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/sulphur_dioxide_so2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <TextView
                android:id="@+id/so2_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/intValue(airQuality.so2)}"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/so2"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/so2"
                tools:text="50" />

            <TextView
                android:id="@+id/index_level_value_so2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/so2_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/so2_value"
                tools:text="Good" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>